# dtcg-notebooks

./: .buildinfo  .gitattributes  .gitignore  CNAME  README.md  _config.yml  _toc.yml  build.sh  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  welcome.html  welcome.md
.github/workflows/: deploy.yml
_sources/notebooks/: 01_L1_datacubes.ipynb  01_alps.ipynb  02_L2_datacubes.ipynb  02_iceland.ipynb  03_validation.ipynb  04_user_provided_data.ipynb  05_mcs_workflow_example.ipynb  06_sfc_type_workflow.ipynb  07_explore_datacubes.ipynb
notebooks/: 01_L1_datacubes.html  01_L1_datacubes.ipynb  01_alps.html  01_alps.ipynb  02_L2_datacubes.html  02_L2_datacubes.ipynb  02_iceland.html  02_iceland.ipynb  03_lps_jupyter_dashboard.ipynb  03_validation.html  03_validation.ipynb  04_calibrate_with_eolis_data.html  04_calibrate_with_eolis_data.ipynb  04_user_provided_data.html  04_user_provided_data.ipynb  05_additional_features.html  05_additional_features.ipynb  05_mcs_workflow_example.html  05_mcs_workflow_example.ipynb  06_sfc_type_workflow.html  06_the_beginning_of_dtcg.html  06_the_beginning_of_dtcg.ipynb  07_explore_datacubes.html  07_explore_datacubes.ipynb  07_load_l2_datacubes.ipynb  07_recreate_dea_story.html  07_recreate_dea_story.ipynb  basin_selection.ipynb  notebook_iceland_draft.ipynb
src/dtcg-notebook/frontend/: widgets.py
src/dtcg_notebook/: main.py
tests/: conftest.py
tests/frontend/: test_widgets.py
