[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtcg-notebook"
version = "0.0.1"
authors = [
    { name = "DTCG Contributors", email = "" },
]
description = "DTCG Glacier Notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "DTCG",
    "OGGM",
    "API"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy<2.0",
    "matplotlib",
    "geopandas",
    "jupyter",
    "dtcg @ git+ssh://git@github.com/DTC-Glaciers/dtcg.git@develop",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "coveralls",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme >= 1.1",
]
dev = [
    "dtcg-notebook[tests,docs]",
    "hatchling >= 1.12",
    "build >= 0.7",
    "pylint >= 2.16.1",
    "flake8 >= 6.0",
    "black >= 23.1",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/DTC-Glaciers/dtcg-glaciers-notebooks"
"Bug Tracker" = "https://github.com/DTC-Glaciers/dtcg-glaciers-notebooks/issues"
"Documentation" = "https://dtc-glaciers.github.io"

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]

# [project.scripts]
# run-dtcg-notebook = "main:main"
# dtcg-run-notebook = "main:main"

[tool.hatch.build.targets.sdist]
packages = ["src/dtcg_notebook"]
exclude = [
    "logs",
    "*.png",
    "*.vtu",
    "*.csv",
    "*.nc",
    "*.bat",
    "*.sh",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dtcg_notebook"]

[tool.hatch.metadata]
allow-direct-references = true